--- a/CarWiki/index.html
+++ b/CarWiki/index.html
@@ -17,5 +17,6 @@
         </form>
     </header>
   <!-- <img src="download-removebg-preview.png" id="tools">-->
+    <h2 class="Title">Autopedia<h2>
 </body>
 </html>
