--- a/CarWiki/index.html
+++ b/CarWiki/index.html
@@ -17,5 +17,6 @@
         </form>
     </header>
   <!-- <img src="download-removebg-preview.png" id="tools">-->
+<p class="qoute">"Failure is simply the opportunity to begin again, this time more intelligently."</p>
 </body>
 </html>
